sample/error/e01209.asn
First DEFINITIONS ::=
BEGIN
    MyInt ::= INTEGER
END

E01209 DEFINITIONS ::=
BEGIN
IMPORTS
    MyInt
    FROM Dummy;         -- E01209

    myInt MyInt ::= 100
END
